Kubernetes/ug-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ug-frontend
  labels:
    app: ug-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ug-frontend
  template:
    metadata:
      labels:
        app: ug-frontend
    spec:
      containers:
      - name: ug-frontend
        image: alexm1297/ug-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80    
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"  
        livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: ug-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: ug-frontend
  type: NodePort
