Kubernetes/ug-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ug-user
  labels:
    app: ug-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ug-user
  template:
    metadata:
      labels:
        app: ug-user
    spec:
      containers:
      - name: ug-user 
        image: alexm1297/ug-user:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 64Mi
          limits:
            memory: 1024Mi
        livenessProbe:
            httpGet:
              path: /api/v0/feed
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 3      
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ug-user
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ug-user
  type: NodePort
