Kubernetes/front-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "frontend-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ug-frontend
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ug-frontend
              servicePort: 80
